# ETL_Netflix

./: README.md  pyproject.toml
src/: main.py
src/data/ready/: clean.xlsx
src/utils/: extract.py  load.py  transform.py
