[tool.poetry]
name = "etl-netflix"
version = "0.1.0"
description = "etl basica com para montar um dashboard"
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
